<?xml version="1.0"?>
<package format="2">
  <name>formula</name>
  <version>1.1.0</version>
  <description>
    TurtleBot3 AutoRace 2020 ROS 1 packages (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="ashekim@robotis.com">Ashe Kim</author>
  <author>Ashe Kim</author>
  <maintainer email="ashekim@robotis.com">Ashe Kim</maintainer>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/formula</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/formula</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/formula/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>formula_camera</exec_depend>
  <exec_depend>formula_core</exec_depend>
  <exec_depend>formula_detect</exec_depend>
  <exec_depend>formula_driving</exec_depend>
  <exec_depend>formula_msgs</exec_depend>
  <export><metapackage/></export>
</package>
